# sdl_perfect_gameloop

./: .gitignore  CMakeLists.txt  main.c
include/: cnanosleep.h  inc_sdl2.h  main.h  utils.h
src/: cnanosleep.c
